--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ h2{
 }
 .propos{
 	color: #CDCDCD;
-	margin-top: 42px;
+	margin: 42px auto;
 }
 button{
 border: #F1CDB3 solid 1px;
@@ -155,7 +155,6 @@ background-color: #FFFFFF;
 }
 .orangeButton{
 	background-color: #F1CDB3;
-	margin-top: 42px;
 }
 section#about{
 	height: 588px;
@@ -189,9 +188,10 @@ section#ourFriends{
 }
 .sliderContainer{	
 	display: flex;
+	align-items: center;
 	width: 100%;
 	margin: 60px auto;
-	position: relative;
+	gap: 52px;
 }
 
 .roundButton{
@@ -201,16 +201,109 @@ section#ourFriends{
 	border-radius: 100px;
 	display: flex;
 	align-items: center;
-	padding-left: 17px;
+	padding-left: 15px;
 }
+.disableButton{
+	filter: grayscale(100%);
+}
+
 .slideLeft{
-	position: absolute;	
+	/* position: absolute;	 */
 	left: 0;
 }
 .slideRight{
-	position: absolute;
+	/* position: absolute; */
 	right: 0;
 }
 .arrow{
 	transform: rotate(180deg)
+}
+.slider{
+	overflow: hidden;
+	position: relative;
+	max-width: 82.5%;
+	/* height: ;	 */
+}
+.track{
+	margin: 0 auto;
+	display: flex;
+	gap: 9.09090909%;
+	transition: all .5s;
+}
+.sliderItem{
+	min-width: 27.27272727%;
+	padding-bottom: 30px;
+	background-color: #FAFAFA;
+}
+.type{
+	margin: 30px auto;
+	font-family: 'Georgia';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 20px;
+	line-height: 23px;
+	letter-spacing: 0.06em;
+	color: #545454;
+}
+.petButton:hover{
+	background-color: #F1CDB3;
+}
+.petPopUp{
+	display: flex;
+	max-width: 70.3125%;
+	align-items: center;
+	z-index: 1;
+	padding-right: 10px;
+	padding-bottom: 9px;
+	/* min-width: 70.3125%;	 */
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	gap: 30px;
+	transform: translate(-50%, -50%);
+	background: #FAFAFA;
+	border-radius: 9px;
+}
+.petName{
+	font-family: 'Georgia';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 35px;
+	line-height: 130%;
+	letter-spacing: 0.06em;	
+	color: #000000;
+	margin-bottom: 10px;
+}
+.petDescription{
+	margin-top: 40px;
+	font-family: 'Georgia';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 15px;
+	line-height: 110%;
+	letter-spacing: 0.06em;
+	color: #000000;
+}
+h4{
+	font-family: 'Georgia';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 20px;
+	line-height: 115%;
+	letter-spacing: 0.06em;	
+	color: #000000;	
+}
+.petPopupImg{
+	min-width: 50%;
+}
+.grayBG{
+	width: 100%;
+	height: 100vh;
+	position: fixed;
+	top: 0;
+	background: rgba(41, 41, 41, 0.6);
+	display: none;
+}
+.visible{
+	display: block;
 }
