--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ blockquote, q {
 a{
 	text-decoration: none;
 	outline: none;
+	cursor: pointer;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
@@ -209,14 +210,6 @@ section#ourFriends{
 	filter: grayscale(100%);
 }
 
-.slideLeft{
-	/* position: absolute;	 */
-	left: 0;
-}
-.slideRight{
-	/* position: absolute; */
-	right: 0;
-}
 .arrow{
 	transform: rotate(180deg)
 }
@@ -327,7 +320,6 @@ h4{
 section#help {
 	padding: 80px 50px 100px 50px;
 	text-align: center;
-	border: red 1px solid;
 }
 .helpKinds{
 	display: flex;
@@ -337,14 +329,6 @@ section#help {
 	column-gap: 120px;
 	row-gap: 50px;
 	margin-top: 60px;
-}
-.helpItem{
-	/* margin-top: 60px;
-	margin-left: 120px;
-	 */
-}
-.helpItem:first-child{
-	margin-left: 0;
 }
 .helpKind{
 	font-family: 'Georgia';
@@ -359,7 +343,45 @@ section#help {
 /* help end */
 
 
+/* donation start */
 
+section#donation{
+	padding: 6.3% 16.7% 7.9% 14.3% ;
+	background: #F6F6F6;
+	display: flex;
+	align-items: center;
+	gap: 20px;
+}
+.bankCard {
+	background: #F1CDB3;
+	border-radius: 9px;
+	width: 100%;
+	padding: 10px 15px 10px 60px;
+}
+.bank{
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+.bankCard::before{
+	content: url(./assets/credit-card.svg);
+	position: absolute;
+	transform: translateX(-130%);
+}
+.legalInfo{
+	font-family: 'Arial';
+	font-style: italic;
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 18px;
+	display: flex;
+	align-items: center;	
+	color: #B2B2B2;
+	margin-top: 20px;	
+}
+/* .donationDog{
+	display: inline-block;
+} */
+/* donation end */
 
 
 
